# anyfield

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  anyfield.py  pyproject.toml  setup.cfg  setup.py  tests.py
.github/workflows/: publish_package.yml  test.yml
docs/: Makefile
docs/source/: conf.py  index.rst
src/: anyfield.py
src/anyfield.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: basic.py
