[bdist_wheel]
universal=1

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all-files = 1

[upload_sphinx]
upload-dir = docs/build/html


[metadata]
name = anyfield
version = 0.3.1
author = Dmytro Katyukha
author_email = dmytro.katyukha@gmail.com
description = Simplifies structured data processing
long_description = file: README.rst
url = https://github.com/katyukha/anyfield
project_urls =
    Bug Tracker = https://github.com/katyukha/anyfield/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
license = MPL 2.0

[options]
python_requires = >=3.7
package_dir =
    = src
py_modules =
    anyfield
